syntax = "proto3";

package acs13;
import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option (aelf.identity) = "acs13";
option csharp_namespace = "AElf.Standards.ACS13";

service OracleAggregatorContract {
  rpc Aggregate (AggregateInput) returns (google.protobuf.Empty) {
  }

  rpc GetLastAnswer (GetLastAnswerInput) returns (Answer) {
    option (aelf.is_view) = true;
  }

  rpc GetAnswerByRoundId (GetAnswerByRoundIdInput) returns (Answer) {
    option (aelf.is_view) = true;
  }
}

message AnswerUpdated {
  option (aelf.is_event) = true;
  aelf.Hash request_id = 1 [(aelf.is_indexed) = true];
  int64 round_id = 2 [(aelf.is_indexed) = true];
  bytes agreed_value = 3;
}

message QuestionableQueryFound {
  option (aelf.is_event) = true;
  aelf.Hash request_id = 1 [(aelf.is_indexed) = true];
  int64 round_id = 2 [(aelf.is_indexed) = true];
  QuestionableInfo questionable_info = 3;
}

message QuestionableInfo{
  repeated aelf.Address nodes = 1;
  repeated bytes real_value = 2;
}

message AggregateInput{
  aelf.Hash request_id = 1;
  aelf.Address requester = 2;
  int64 round_id = 3;
  repeated NodeWithData responses = 4;
  aelf.Address callback_address = 5;
  string method_name = 6;
}

message NodeWithData{
  aelf.Address node = 1;
  bytes real_data = 3;
}

message GetLastAnswerInput{
  aelf.Hash request_id = 1;
}

message Answer{
  bytes answer = 1;
  google.protobuf.Timestamp update_time = 2;
}

message GetAnswerByRoundIdInput{
  aelf.Hash request_id = 1;
  int64 round_id = 2;
}